# RayTracer

./: .gitignore  CMakeLists.txt  README.md  test.ppm
.github/workflows/: cmake.yml
src/: RayTracerConfig.h.in  main.cxx
src/imageWriters/: CMakeLists.txt  imageWriterBase.cxx  ppmWriter.cxx  ppmWriter.hxx
src/imageWriters/private/: imageWriterBase.hxx
src/lights/: CMakeLists.txt  light.hxx  pointLight.cxx
src/materials/: CMakeLists.txt  material.cxx  material.hxx
src/maths/: CMakeLists.txt  colour.cxx  colour.hxx  constants.hxx  matrix4x4.cxx  matrix4x4.hxx  point4.cxx  point4.hxx  tolerance.hxx  transformFactory.cxx  transformFactory.hxx  tuple4.cxx  vector4.cxx  vector4.hxx
src/maths/private/: tuple4.hxx
src/objects/: CMakeLists.txt  object.hxx  pointLight.hxx  ray.cxx  ray.hxx  sphere.cxx  sphere.hxx
src/renderer/: CMakeLists.txt  canvas.cxx  canvas.hxx  shader.cxx  shader.hxx  world.cxx  world.hxx
tests/: CMakeLists.txt  test_canvas.cxx  test_colour.cxx  test_light.cxx  test_material.cxx  test_matrix.cxx  test_point4.cxx  test_ppmWriter.cxx  test_ray.cxx  test_shader.cxx  test_sphere.cxx  test_transform.cxx  test_vector4.cxx  test_world.cxx
